# NotYou.AI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
cluster_interpreter/: README.md  requirements.txt  run.py  test_supabase.py
cluster_interpreter/agents/: retriever_agent.py
cluster_interpreter/agents/retriever_agent/nodes/: coverage_checker.py  coverage_checker_simple.py  field_selector.py  schema_loader.py
cluster_interpreter/agents/retriever_agent/prompts/: retriever_prompt.txt
cluster_interpreter/data/: mock_field_coverage.json  schema_definitions.json  schema_definitions_backup.txt  schema_links.json
cluster_interpreter/services/: schema_loader.py  supabase_client.py
cluster_service_pro/: Dockerfile  main-py(backup).txt  main.py  requirements.txt
clustering_service/: app.py  requirements.txt
multi_cluster_service/: Dockerfile  app.py  requirements.txt
nodes_n8n/: Flows.json
pca_service/: app.py
umap_service/: app.py  dockerfile  requirements.txt
